--- a/Paper_Review/assets/css/style.css
+++ b/Paper_Review/assets/css/style.css
@@ -5,8 +5,8 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-@import "custom.css";
-@import "syntax/monokai";
+@import "./custom.css";
+@import "./syntax/monokai";
 
 @layer components {
   .heading {
