--- a/Paper_Review/_includes/logo.html
+++ b/Paper_Review/_includes/logo.html
@@ -2,7 +2,7 @@
   <a class="flex items-center hover:opacity-70 transition duration-300 ease-in-out" href="{{ site.baseurl }}">
     {% if site.logo.logo_desktop_image %}
     <img class="mr-2" height="{{ site.logo.logo_desktop_height }}" width="{{ site.logo.logo_desktop_width }}"
-      alt="{{ site.title }} Logo" src="{{ site.logo.logo_desktop_image | relative_url }}" />
+      alt="{{ site.title }} Logo" src="{{ site.logo.logo_desktop_image }}" />
     {% endif %}
     {% if site.logo.logo_desktop_text %}
     <h2 class="text-2xl font-sans font-semibold">{{ site.logo.logo_desktop_text }}</h2>
@@ -13,7 +13,7 @@
   <a class="flex items-center hover:opacity-70 transition duration-300 ease-in-out" href="{{ site.baseurl }}">
     {% if site.logo.logo_mobile_image %}
     <img height="{{ site.logo.logo_mobile_height }}" width="{{ site.logo.logo_mobile_width }}"
-      alt="{{ site.title }} Logo" src="{{ site.logo.logo_mobile_image | relative_url }}" />
+      alt="{{ site.title }} Logo" src="{{ site.logo.logo_mobile_image }}" />
     {% endif %}
     {% if site.logo.logo_mobile_text %}
     <h2 class="text-2xl font-sans font-semibold">{{ site.logo.logo_mobile_text }}</h2>
